<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/popup_border"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="35dp"
            android:paddingBottom="35dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <ImageButton
                android:id="@+id/close_window_btn_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                app:srcCompat="@android:drawable/ic_delete" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Original"
                android:layout_marginLeft="20dp"/>

            <EditText
                android:id="@+id/word_original_input_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minEms="12"
                android:inputType="text"
                android:text=""
                android:textIsSelectable="true"
                android:layout_marginLeft="20dp"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="Translation"
                android:layout_marginLeft="20dp"/>

            <EditText
                android:id="@+id/word_translated_input_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:minEms="12"
                android:inputType="text"
                android:text=""
                android:textIsSelectable="true"
                android:layout_marginLeft="20dp"/>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="Subject"
                android:layout_marginLeft="20dp"/>

            <Spinner
                android:id="@+id/word_subject_filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:spinnerMode="dropdown"
                android:layout_marginLeft="20dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center_horizontal">

                <Button
                    android:id="@+id/update_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:backgroundTint="@color/button_neutral_color"
                    android:text="Update"
                    android:layout_marginEnd="10dp"/>

                <Button
                    android:id="@+id/delete_word_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:backgroundTint="@color/button_negative_color"
                    android:text="Delete"
                    android:layout_marginStart="10dp"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>