<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.AllWordsFragment">

    <LinearLayout
        android:id="@+id/header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/add_word_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/button_color"
            android:text="Add Word" />

        <Spinner
            android:id="@+id/languages_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="#000000"
            android:spinnerMode="dropdown" />

        <Spinner
            android:id="@+id/subjects_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="#000000"
            android:spinnerMode="dropdown" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBaseline_toBottomOf="@id/header_layout"
        android:layout_marginTop="75dp">

        <TableLayout
            android:id="@+id/words_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:tabMode="scrollable">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#CCCCCC">

                    <TextView
                        android:id="@+id/textOriginal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Word"
                        android:layout_weight="1"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        android:background="@drawable/table_header_left_elem"
                        android:paddingStart="5dp"/>

                    <TextView
                        android:id="@+id/textTranslated"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Translation"
                        android:layout_weight="1"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        android:paddingStart="5dp"/>

            </TableRow>
        </TableLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>